--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<h1 id="f1">Flower photos</h1>
+		<p>A flower, also known as a bloom or blossom, is the reproductive structure found in flowering plants Flowers consist of a combination of vegetative organs</p>
+	</div>
+	<div>
+		<h1 id="f2">Roses pictures</h1>
+		<p>A rose is either a woody perennial flowering plant of the genus Rosa in the family Rosaceae or the flower it bears.</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
