--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<h1 id="f1">Flower photos</h1>
+		<h1 id="f1">Flowers photos</h1>
 		<p>A flower, also known as a bloom or blossom, is the reproductive structure found in flowering plants Flowers consist of a combination of vegetative organs</p>
 	</div>
 	<div>
